bump the limit on max item size for pool_init()/pool_cache_init() up to 1 << 24, so that the pools can be used for ZFS block allocations, which are up to SPA_MAXBLOCKSHIFT (1 << 24)

part of PR kern/55397 by Frank Kardel